# infr

./: .gitignore  AUDIT.md  CONTEXT.md  Cargo.toml  GPULOAD.md  PLAN.md  README.md  STDTYPE.md
.github/workflows/: ci.yml
crates/infr-chat/: Cargo.toml
crates/infr-chat/src/: lib.rs  stream.rs  template.rs  tools.rs
crates/infr-chat/tests/: llama3_template.rs
crates/infr-cli/: Cargo.toml
crates/infr-cli/src/: main.rs
crates/infr-core/: Cargo.toml
crates/infr-core/src/: backend.rs  error.rs  graph.rs  iquant_grids.rs  lib.rs  loader.rs  pager.rs  progress.rs  tensor.rs
crates/infr-cpu/: Cargo.toml  build.rs
crates/infr-cpu/src/: kernels.rs  kvquant.rs  lib.rs  moe.rs  pool.rs  quant.rs  repack.rs  turbo.rs  turbo3.rs
crates/infr-decode/src/: lib.rs
crates/infr-engine/: Cargo.toml
crates/infr-engine/src/: chat.rs  lib.rs
crates/infr-gguf/: Cargo.toml  build.rs
crates/infr-gguf/examples/: dump.rs
crates/infr-gguf/src/: dequant.rs  lib.rs
crates/infr-hub/: Cargo.toml
crates/infr-hub/src/: lib.rs  model_ref.rs  pull.rs  store.rs
crates/infr-llama/: Cargo.toml
crates/infr-llama/examples/: decode_bench.rs  gguf_dump.rs  prefill_bench.rs  prefill_stage_prof.rs  prof_at.rs  run.rs
crates/infr-llama/src/: arch.rs  config.rs  cpu_backend.rs  cpu_model.rs  diffusion.rs  grammar.rs  kv.rs  lib.rs  model.rs  mtp.rs  parallel.rs  quant.rs  qwen35.rs  sampling.rs  seam_model.rs  tokenizer.rs  transformer.rs  util.rs  weights.rs
crates/infr-llama/src/chat/: cpu.rs  diffusion.rs  metal.rs  mod.rs  rocm.rs  vulkan.rs
crates/infr-llama/src/cpu_backend/: runner.rs  sc.rs  weights.rs
crates/infr-llama/src/mtp/: backends.rs  mod.rs
crates/infr-llama/src/seam/: mod.rs  model.rs  runner.rs  sc.rs  weights.rs
crates/infr-llama/tests/: cpu_backend.rs  decode_consistency.rs  seam_op_parity.rs
crates/infr-metal/: Cargo.toml
crates/infr-metal/shaders/: attention.metal  deltanet.metal  elementwise_norms.metal  embed_gather.metal  kv_cache.metal  linear.metal  moe.metal  rope_ffn.metal
crates/infr-metal/src/: exec.rs  lib.rs  profile.rs  shaders.rs
crates/infr-metal/tests/: backend.rs  deltanet_bw.rs  dispatch_overhead.rs  gemv_bw.rs  kernel_names.rs  moe_bw.rs  parity.rs
crates/infr-model/: Cargo.toml
crates/infr-model/src/: lib.rs
crates/infr-prof/: Cargo.toml
crates/infr-prof-rt/: Cargo.toml
crates/infr-prof-rt/src/: lib.rs
crates/infr-prof/src/: lib.rs
crates/infr-rocm/: Cargo.toml  build.rs
crates/infr-rocm/examples/: hiprtc_test.rs  smoke_test.rs  wmma_probe.rs
crates/infr-rocm/src/: backend.rs  exec.rs  ffi.rs  kernels.rs  lib.rs
crates/infr-rocm/tests/: parity.rs
crates/infr-server/: Cargo.toml
crates/infr-server/src/: lib.rs
crates/infr-vulkan/: Cargo.toml  build.rs
crates/infr-vulkan/examples/: coopmat2_test.rs  coopmat_int8_test.rs  limits_probe.rs  proj_bench.rs
crates/infr-vulkan/shaders/: add_scaled_id.comp  argmax.comp  attention.comp  attention_kv.comp  attn_combine.comp  attn_flash.comp  attn_flash_combine.comp  attn_flash_partial.comp  attn_flash_reg.comp  attn_flash_warp.comp  attn_in.comp  attn_in_q.comp  attn_live.comp  attn_nc_fa.comp  attn_partial.comp  attn_partial_mrows.comp  attn_prefill.comp  attn_prefill_partial.comp  attn_pv.comp  attn_pv_reduce.comp  attn_qk.comp  conv1d_silu.comp  conv1d_silu_par.comp  copy_strided.comp  deltanet.comp  deltanet_chunked.comp  deltanet_gates.comp  deltanet_gates_seq.comp  deltanet_norm.comp  deltanet_prep.comp  deltanet_scan.comp  deltanet_seq.comp  deltanet_strided.comp  dequant_q8_f16.comp  dequant_turbo_f16.comp  dg_eb_sample.comp  e2b_gate.comp  e2b_proj.comp  embed_gather.comp  ffn_in.comp  (+85 more)
crates/infr-vulkan/src/: adapter.rs  ep.rs  expert_pool.rs  gemm.rs  lib.rs  linear.rs  matmul.rs  ops.rs  p2p.rs  pager.rs  pcache.rs  pipeline.rs  recorder.rs  tp.rs  tp_allreduce.rs  tp_sem.rs
crates/infr-vulkan/tests/: bandwidth_probe.rs  chunked_delta_math.rs  decode_gemv_bw.rs  dg_eb_sample.rs  gemm_bench.rs  gemv_streamed_parity.rs  grid_mmq_parity.rs  interconnect_probe.rs  kv_addr_parity.rs  kv_q8_roundtrip.rs  mmq_wide_bn_determinism.rs  mmv_mrow_symmetric_q2k_q3k.rs  mmv_mw_parity.rs  mmv_row1_bit_identical.rs  moe_id_gemv_new_formats_parity.rs  moe_id_gemv_real_dims.rs  moe_mmq_fp4_parity.rs  moe_mmq_q2_0_parity.rs  pager_gemv_multi_parity.rs  pager_gemv_parity.rs  pager_mmq_parity.rs  small_m_bench.rs  warp_gemm_parity.rs  weight_addr_parity.rs
docs/: DIFFUSIONGEMMA.md  GPULOAD.md  METAL.md  MTP.md  PERF.md  PLAN.md  QWEN35.md  README.md  STDTYPE.md  TRAIN.md  audit.md  cpu-perf.md  cuda-plan.md  diffusion-gemma.md  igpu.md  kernels.md  metal.md  mtp.md  perf.md  plan.md  qwen35.md  rocm-plan.md  sycl-plan.md
scripts/: compare.sh  perf-sweep.sh  samply-top.py
