[workspace]
resolver = "2"
members = [
    "crates/infr-core",
    "crates/infr-vulkan",
    "crates/infr-metal",
    "crates/infr-hub",
    "crates/infr-gguf",
    "crates/infr-cpu",
    "crates/infr-chat",
    "crates/infr-engine",
    "crates/infr-server",
    "crates/infr-llama",
    "crates/infr-cli",
    "crates/infr-prof",
    "crates/infr-prof-rt",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kryptic-sh/infr"

[workspace.dependencies]
# internal
infr-core = { path = "crates/infr-core" }
infr-vulkan = { path = "crates/infr-vulkan" }
infr-metal = { path = "crates/infr-metal" }
infr-hub = { path = "crates/infr-hub" }
infr-gguf = { path = "crates/infr-gguf" }
infr-cpu = { path = "crates/infr-cpu" }
infr-chat = { path = "crates/infr-chat" }
infr-engine = { path = "crates/infr-engine" }
infr-server = { path = "crates/infr-server" }
infr-prof = { path = "crates/infr-prof" }
infr-prof-rt = { path = "crates/infr-prof-rt" }

# shared third-party
thiserror = "2"
anyhow = "1"
half = "2"
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
# preserve_order: chat templates `tojson` the request's tool definitions into the prompt — HF
# transformers and llama.cpp-minja both keep the author's key order, so infr must too (BTreeMap
# would alphabetize the JSON the model sees).
serde_json = { version = "1", features = ["preserve_order"] }
memmap2 = "0.9"
rayon = "1"
# SIGINT/SIGTERM via `sigaction` in the CLI (see `infr_core::shutdown`). Already in the lockfile
# under tokio and indicatif/console — a direct dep here costs nothing new.
libc = "0.2"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.3"
# preserve_order: see serde_json below — template values must keep map key order end-to-end.
minijinja = { version = "2", features = ["preserve_order"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
# `strftime_now` in HF chat templates (Llama-3.x stamps "Today Date:") — llama.cpp-minja parity.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ash = "0.38"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
metal = "0.33"
objc = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
    "stream",
] }
sha2 = "0.10"
indicatif = "0.17"
dirs = "5"
tokenizers = "0.20"
llguidance = "1"
toktrie_hf_tokenizers = "1"

# `cargo test` builds dev (-O0); the CPU interpreter, GGUF dequant, and f16 conversions at -O0 are
# 10-50x slower, which turns the locally-gated model tests (CI skips them — no GGUFs in its cache)
# into minutes EACH. Optimize just the compute crates in dev; test binaries and the harness stay
# -O0 for fast edit-compile cycles. rustc floats are IEEE at every opt level (no fast-math, no FMA
# contraction), so the bit-exact CPU goldens are unaffected.
[profile.dev.package.infr-cpu]
opt-level = 3
[profile.dev.package.infr-gguf]
opt-level = 3
[profile.dev.package.half]
opt-level = 3

# Line tables (not full debug info) in release so sampling profilers (samply/perf — see
# docs/perf.md) can attribute samples into inlined kernels. Debug info never affects codegen,
# so release perf and the bit-exact goldens are unchanged; only the binary grows.
[profile.release]
debug = "line-tables-only"
