[package]
name = "infr-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infr-core.workspace = true
infr-gguf.workspace = true
tokenizers.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
