[package]
name = "infr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "infr"
path = "src/main.rs"

[dependencies]
infr-core.workspace = true
infr-vulkan.workspace = true
infr-hub.workspace = true
infr-engine.workspace = true
infr-server.workspace = true
infr-llama = { path = "../infr-llama" }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
