[package]
name = "infr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "infr"
path = "src/main.rs"

[features]
# Enable the native ROCm/HIP backend (`INFR_DEV=rocm`); forwards to infr-llama's
# gate. Off by default so the CLI builds without ROCm installed.
rocm = ["infr-llama/rocm"]

[dependencies]
infr-core.workspace = true
infr-vulkan.workspace = true
infr-hub.workspace = true
infr-engine.workspace = true
infr-server.workspace = true
infr-llama = { path = "../infr-llama" }
clap.workspace = true
clap_complete.workspace = true
clap_complete_nushell.workspace = true
clap_mangen.workspace = true
anyhow.workspace = true
serde_json.workspace = true
libc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
