[package]
name = "infr-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infr-prof.workspace = true
infr-prof-rt.workspace = true
infr-core.workspace = true
infr-gguf.workspace = true
bytemuck.workspace = true
half.workspace = true
rayon.workspace = true
anyhow.workspace = true
