[package]
name = "infr-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infr-core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
indicatif.workspace = true
dirs.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3"
