[package]
name = "infr-llama"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
infr-core.workspace = true
infr-vulkan.workspace = true
infr-gguf.workspace = true
half.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
tracing.workspace = true
indicatif.workspace = true
tokenizers = { workspace = true }
