[package]
name = "infr-rocm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
rocm = []

[dependencies]
infr-core.workspace = true
indicatif.workspace = true
infr-gguf.workspace = true
half.workspace = true
bytemuck.workspace = true

[dev-dependencies]
infr-cpu.workspace = true

[[example]]
name = "smoke_test"
path = "examples/smoke_test.rs"
required-features = ["rocm"]
