[package]
name = "infr-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
infr-core.workspace = true

[dependencies]
infr-prof.workspace = true
infr-prof-rt.workspace = true
infr-core.workspace = true
ash.workspace = true
gpu-allocator.workspace = true
thiserror.workspace = true
half.workspace = true
bytemuck.workspace = true
tracing.workspace = true
indicatif.workspace = true
