[package]
name = "infr-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
infr-core.workspace = true

[dependencies]
infr-prof.workspace = true
infr-prof-rt.workspace = true
infr-core.workspace = true
ash.workspace = true
gpu-allocator.workspace = true
thiserror.workspace = true
half.workspace = true
bytemuck.workspace = true
tracing.workspace = true
indicatif.workspace = true
rayon.workspace = true
libc.workspace = true
# GGUF block layout (`block_layout`) — recorder.rs's resident-BDA streamed dispatch converts
# element-space expert strides to the per-expert BYTE stride the STREAMED shaders' pointer
# arithmetic needs; single source of truth with the GGUF loader instead of a second hand-kept table.
infr-gguf.workspace = true

[dev-dependencies]
memmap2.workspace = true
